--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/react-hooks": "8.0.1",
-    "react-router": "3.2.6",
-    "@testing-library/react": "12.1.5",
     "@devcycle/react-client-sdk": "^1.23.1",
     "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "12.1.5",
+    "@testing-library/react-hooks": "8.0.1",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
@@ -15,6 +14,8 @@
     "@types/react-dom": "^18.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "4.4.6",
+    "react-router": "3.2.6",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
