--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "history": "1.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "4.4.6",
