--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "history": "1.2.2",
+    "lodash": "4.17.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "4.4.6",
