--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "0.21.2",
     "history": "1.2.2",
     "lodash": "4.17.9",
     "react": "^18.3.1",
