--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "4.4.6",
     "react-router": "3.2.6",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "17.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
