--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "0.21.2",
     "history": "1.2.2",
     "lodash": "4.17.9",
+    "next": "13.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "4.4.6",
