--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "history": "1.2.2",
     "lodash": "4.17.9",
     "next": "13.0.0",
+    "next-auth": "3.14.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "4.4.6",
